--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>src/common</module>
-        <module>src/gateway</module>
+        <module>src/common-resources</module>
+        <module>src/proxies</module>
         <module>src/sharedflows</module>
     </modules>
     <profiles>
