--- a/src/proxies/pom.xml
+++ b/src/proxies/pom.xml
@@ -2,16 +2,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.estrela</groupId>
-    <artifactId>gateway</artifactId>
+    <artifactId>proxies</artifactId>
     <packaging>pom</packaging>
     <version>1.0</version>
     <properties>
         <main.basedir>${project.basedir}</main.basedir>
     </properties>
+    <modules>
+        <module>helloworld</module>
+        <module>helloworld2</module>
+        <module>soap</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>me.estrela</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>common-resources</artifactId>
             <version>1.0</version>
         </dependency>
     </dependencies>
@@ -56,7 +61,7 @@
                                     <artifactItems>
                                         <artifactItem>
                                             <groupId>me.estrela</groupId>
-                                            <artifactId>common</artifactId>
+                                            <artifactId>common-resources</artifactId>
                                             <version>1.0</version>
                                             <type>jar</type>
                                             <overWrite>true</overWrite>
