--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,10 @@
     <groupId>me.estrela</groupId>
     <artifactId>apigee-proxy-manager</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
+    <properties>
+        <apigee-edge-maven-plugin.version>1.2.1</apigee-edge-maven-plugin.version>
+    </properties>
     <modules>
         <module>src/common-resources</module>
         <module>src/proxies</module>
@@ -27,7 +30,7 @@
         <dependency>
             <groupId>io.apigee.build-tools.enterprise4g</groupId>
             <artifactId>apigee-edge-maven-plugin</artifactId>
-            <version>1.2.1</version>
+            <version>${apigee-edge-maven-plugin.version}</version>
         </dependency>
     </dependencies>
 </project>
