--- a/.github/workflows/readme-github-sync.yml
+++ b/.github/workflows/readme-github-sync.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: readmeio/github-readme-sync@1.0.0
         with:
           repo-token: '${{ secrets.GITHUB_TOKEN }}'
-          readme-api-id: '${{ secrets.README_API_ID }}'
+          readme-api-id: ':oid:'
           api-file-path: 'src/proxies/helloworld/spec/helloworld.yml'
           readme-api-key: '${{ secrets.README_API_KEY }}'
           readme-api-version: '1.0'
