--- a/src/proxies/helloworld/spec/helloworld.yml
+++ b/src/proxies/helloworld/spec/helloworld.yml
@@ -9,7 +9,7 @@ servers:
 paths:
   /pets:
     get:
-      summary: List all pets
+      summary: List tha pets
       operationId: listPets
       tags:
         - pets
